force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/Funding_Opportunity_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This stores the field mapping from Funding Opportunity Staging object to Funding Opportunity object.</description>
    <label>Funding Opportunity Field Mapping</label>
    <pluralLabel>Funding Opportunity Field Mappings</pluralLabel>
</CustomObject>