force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/fields/Actual_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Actual_API_Name__c</fullName>
    <description>API names of actual funding opportunity object</description>
    <label>Actual API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>