force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/fields/I_RS_Concatenation_Order__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Concatenation_Order__c</fullName>
    <description>When concatenating multiple source texts on the same destination text field, specify the order</description>
    <label>Concatenation Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>