force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/fields/I_RS_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Field_Type__c</fullName>
    <description>The data type to parse the Staging Opportunity&apos;s field data as when pushing it to the Funding Opportunity.</description>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>