force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/fields/I_RS_Hard_Coded_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Hard_Coded_Text_Value__c</fullName>
    <label>Hard Coded Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>