force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/fields/I_RS_Inactive__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not use this field mapping</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>