force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/fields/I_RS_Object__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object__c</fullName>
    <description>Whether mapping applies to upserting Funding Opportunities, or querying creating Organisations</description>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding Opportunity</fullName>
                <default>true</default>
                <label>Funding Opportunity</label>
            </value>
            <value>
                <fullName>Organisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>