force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/fields/I_RS_Organisation_Query_Order__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation_Query_Order__c</fullName>
    <description>When querying a Primary Funder, which order of precedence does this particular matcher take</description>
    <label>Organisation Query Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>