force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/fields/I_RS_Query_Organisations_with_this_field__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Query_Organisations_with_this_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Query Organisations with this field</label>
    <type>Checkbox</type>
</CustomField>