force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/fields/I_RS_Update_Funding_Opp_When_Modified__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Update_Funding_Opp_When_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a Funding Opportunity Staging is updated and this particular field is changed, push update to associated Funding Opportunity</description>
    <label>Update Funding Opp When Modified</label>
    <type>Checkbox</type>
</CustomField>