force-app/main/default/objects/Funding_Opportunity_Field_Mapping__mdt/fields/Staging_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Staging_API_Name__c</fullName>
    <description>API names of funding opportunity staging object</description>
    <label>Staging API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>